--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
-/*  your css code here. If applicable */
+th, td{
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 0.5rem;
+}
+table tr:nth-child(even) {
+  background-color: #ffffff;   /* even rows */
+}
+table tr:nth-child(odd) {
+  background-color: #f2f2f2;   /* even rows */
+}
